--- a/Pipfile
+++ b/Pipfile
@@ -10,6 +10,10 @@ pytest = "*"
 pytest-cov = "*"
 build = "*"
 almost-make = "*"
+sphinx = "*"
+pydocstyle = "*"
+flake8 = "*"
+toml = "*"
 
 [requires]
 python_version = "3.10"
