--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,5 @@
 [build-system]
-requires = ["setuptools", "toml"]
+requires = ["setuptools", "setuptools-git-versioning"]
 build-backend = "setuptools.build_meta"
 
 [project]
@@ -8,7 +8,7 @@ description = "Tags-aware dictionary"
 readme = "README.md"
 keywords = ["dictionary", "tags"]
 license = {text = "MIT License"}
-version = "0.0.1"
+version = "{tag}"
 classifiers = [
         "Development Status :: 3 - Alpha",
         "License :: OSI Approved :: MIT License",
@@ -19,3 +19,6 @@ dependencies = [
 
 [tool.setuptools]
 packages = ["taggedict"]
+
+[tool.setuptools-git-versioning]
+enabled = true
