--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -24,8 +24,8 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install pipenv
-        pipenv lock -r --dev-only > devreq.txt
-        pip install -r devreq.txt
+        pipenv lock
+        pipenv sync --system --dev
     - name: Lint with flake8
       run: |
         flake8 taggedict --count --select=E9,F63,F7,F82 --show-source --statistics
@@ -36,4 +36,6 @@ jobs:
     - name: Test with pytest
       run: |
         python -m pytest -v
-
+    - name: Build packkages
+      run: |
+        python -m build
