--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -36,6 +36,6 @@ jobs:
     - name: Test with pytest
       run: |
         python -m pytest -v
-    - name: Build packkages
+    - name: Build packages
       run: |
         python -m build
