--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,5 @@
 [build-system]
-requires = ["setuptools", "build"]
+requires = ["setuptools", "build", "setuptools-git-versioning"]
 build-backend = "setuptools.build_meta"
 
 [project]
@@ -8,7 +8,6 @@ description = "Tags-aware dictionary"
 readme = "README.md"
 keywords = ["dict", "tags"]
 license = {file = "LICENSE"}
-version = "0.0.1"
 authors = [{ name = "Fr. Br. George", email = "george@altlinux.org" }]
 classifiers = [
         "Development Status :: 3 - Alpha",
@@ -18,6 +17,7 @@ classifiers = [
 requires-python = ">=3.10"
 dependencies = [
 ]
+dynamic = ["version"]
 
 [project.urls]
 repository = "https://github.com/FrBrGeorge/taggedict"
@@ -25,3 +25,6 @@ documentation = "https://readthedocs.org"
 
 [tool.setuptools]
 packages = ["taggedict"]
+
+[tool.setuptools-git-versioning]
+enabled = true
